<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:src="@drawable/intro_sub"
        android:contentDescription="@string/app_name"
        android:layout_height="300dp"
        android:layout_marginBottom="50dp" />

    <Button
        android:id="@+id/btnAppStart"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/button_normal_states"
        android:text="@string/startButton"
        android:textSize="16sp"
        android:textColor="@color/textGray"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btnAppEnd"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/button_normal_states"
        android:text="@string/exitButton"
        android:textSize="16sp"
        android:textColor="@color/textGray" />

</LinearLayout>