<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:background="@color/textWhite"
        android:gravity="center" >

        <TextView
            android:id="@+id/textDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="14sp"
            android:textColor="@color/textWhite"
            android:background="@color/backgroundColor"
            android:gravity="center_vertical"
            android:paddingStart="10dp" />

        <TextView
            android:id="@+id/textDialogContent"
            android:layout_height="wrap_content"
            android:text="@string/favoriteDeleteDialog"
            android:textSize="18sp"
            android:textColor="@color/textBlack"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="210dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/deleteCancel"
                android:background="@drawable/button_normal_states"
                android:layout_marginEnd="10dp"
                style=""
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnYes"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/deleteYes"
                android:background="@drawable/button_normal_states"
                style=""
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>