<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.philosophy.yd.yourphilosophy.A20_FavoriteList">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listViewLayout"
            android:layout_marginBottom="50dp">

            <LinearLayout
                android:id="@+id/custom_actionbar_sub_layout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/listView1"
                android:choiceMode="multipleChoice" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp">

            <Button
                android:id="@+id/btnSelectAll"
                android:text="@string/selectAll"
                android:onClick="onClickedFavorite"
                android:background="@drawable/button_normal_states"
                style=""
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnSelectCancel"
                android:text="@string/selectCancel"
                android:onClick="onClickedFavorite"
                android:background="@drawable/button_normal_states"
                style=""
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:enabled="false" />

            <Button
                android:id="@+id/btnSelectDelete"
                android:onClick="onClickedFavorite"
                android:text="@string/selectDelete"
                android:background="@drawable/button_normal_states"
                style=""
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:enabled="false" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/navigation_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:background="@color/textWhite"
        android:orientation="horizontal" />

</android.support.v4.widget.DrawerLayout>